--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
-
+@font-face {
+  font-family: "Montserrat";
+  src: url("../src/assets/Montserrat-Regular.ttf"),
+  url("../src/assets/Montserrat-SemiBold.ttf");
+}
 .blue{
   color: #0470a4;
   
@@ -23,7 +26,11 @@
 
 
 *{
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+}
+p{
+  font-size: 16px;
 }
 
 .uld{
