--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,20 @@
+:root{
+  --ele-red: #f82c34;
+  --ele-blue:  #0470a4
+}
+
+body{
+  min-height: 5000px;
+}
+
 @font-face {
   font-family: "Montserrat";
   src: url("../src/assets/Montserrat-Regular.ttf"),
-  url("../src/assets/Montserrat-SemiBold.ttf");
+  url("../src/assets/Montserrat-SemiBold.ttf"),
+  url("../src/assets/Montserrat-Light.ttf");
 }
 .blue{
-  color: #0470a4;
+  color: var(--ele-blue);
   
 }
 
@@ -16,7 +26,7 @@
 
 
 .red{
-  color: #f82c34;
+  color: var(--ele-red);
 }
 
 .word-2{
@@ -47,3 +57,26 @@ p{
     font-size: 35px;
   }
 }
+
+
+@media screen and (max-width: 400px) {
+  .word-1{
+    font-size: 25px;
+  }
+  
+  .word-2{
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 250px) {
+  .word-1{
+    font-size: 18px;
+  }
+  
+  .word-2{
+    font-size: 22px;
+  }
+}
+
+
