--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,8 @@ body{
   font-family: "Montserrat";
   src: url("../src/assets/Montserrat-Regular.ttf"),
   url("../src/assets/Montserrat-SemiBold.ttf"),
-  url("../src/assets/Montserrat-Light.ttf");
+  url("../src/assets/Montserrat-Light.ttf"),
+  url("../src/assets/Montserrat-Bold.ttf");
 }
 .blue{
   color: var(--ele-blue);
@@ -19,6 +20,7 @@ body{
 }
 
 .word-1{
+  line-height: 13px;
   text-transform: uppercase;
   font-size: 45px;
   margin-bottom: 0;
